--- a/src/components/DetailedShowsList/DetailedShowsList.css
+++ b/src/components/DetailedShowsList/DetailedShowsList.css
@@ -26,8 +26,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-top: 40px;
-  padding-bottom: 40px;
+  margin-top: 30px;
 }
 
 .detailed-shows-list-card-wrapper {
@@ -56,7 +55,6 @@
     margin-left: 10px;
     margin-right: 10px;
     margin-top: 10px;
-    margin-bottom: 80px;
   }
 
   .detailed-shows-list-title {
