--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -5,7 +5,6 @@
   margin-left: 60px;
   margin-right: 60px;
   margin-top: 20px;
-  margin-bottom: 80px;
   gap: 20px;
 }
 
@@ -13,7 +12,6 @@
   .home-content {
     margin-left: 10px;
     margin-right: 10px;
-    margin-bottom: 140px;
   }
 }
 
