--- a/src/components/Show/Show.css
+++ b/src/components/Show/Show.css
@@ -1,7 +1,3 @@
-.show-wrapper {
-  margin-bottom: 80px;
-}
-
 .show-container {
   display: flex;
   flex-direction: row;
